fix : edit discussion , new discussion disccussions

--- a/src/app/pages/discussion/discussions/discussions.component.css
+++ b/src/app/pages/discussion/discussions/discussions.component.css
@@ -75,8 +75,10 @@
 }
 
 .discussionsPage .oneDiscussion.focus {
-
   background: rgb(161 167 156 / 77%);
+}
+.discussionsPage .oneDiscussion:hover:not(.focus) {
+  background: rgba(188, 197, 182, 0.77);
 }
 
 .discussionsPage .oneDiscussion > img {
