--- a/src/app/pages/discussion/one-discussion/one-discussion.component.css
+++ b/src/app/pages/discussion/one-discussion/one-discussion.component.css
@@ -18,6 +18,9 @@ header{
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+
+
+  border-radius: 0px 13px 0px 0px;
 }
 header svg{
   cursor: pointer;
@@ -38,4 +41,12 @@ header h2{
   width: 94%;
   border-radius: 5px;
   border: 1px solid rgb(192 192 192 / 40%);background-color: #f3f3f3;
+}
+
+
+form{
+
+}
+form button{
+  cursor: pointer;
 }
