--- a/src/app/pages/discussion/one-discussion/one-discussion.component.html
+++ b/src/app/pages/discussion/one-discussion/one-discussion.component.html
@@ -3,28 +3,41 @@
     <header >
       <h2>{{discussion.title}}</h2>
 
-      <!-- pen to edit discussion -->
-      <svg (click)="edit()" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M11.4 18.1612L18.796 10.7652C17.5518 10.2454 16.4217 9.48641 15.47 8.53121C14.5143 7.57926 13.7549 6.44886 13.235 5.20421L5.83899 12.6002C5.26199 13.1772 4.97299 13.4662 4.72499 13.7842C4.43238 14.1597 4.18125 14.5657 3.97599 14.9952C3.80299 15.3592 3.67399 15.7472 3.41599 16.5212L2.05399 20.6042C1.9913 20.7912 1.982 20.9919 2.02713 21.1838C2.07226 21.3758 2.17004 21.5513 2.30946 21.6907C2.44888 21.8302 2.62443 21.9279 2.81638 21.9731C3.00832 22.0182 3.20904 22.0089 3.39599 21.9462L7.47899 20.5842C8.25399 20.3262 8.64099 20.1972 9.00499 20.0242C9.43632 19.8189 9.83999 19.5692 10.216 19.2752C10.534 19.0272 10.823 18.7382 11.4 18.1612ZM20.848 8.71321C21.5854 7.97577 21.9997 6.9756 21.9997 5.93271C21.9997 4.88982 21.5854 3.88964 20.848 3.15221C20.1106 2.41477 19.1104 2.00049 18.0675 2.00049C17.0246 2.00049 16.0244 2.41477 15.287 3.15221L14.4 4.03921L14.438 4.15021C14.875 5.40099 15.5903 6.5362 16.53 7.47021C17.4919 8.43803 18.6669 9.16745 19.961 9.60021L20.848 8.71321Z" fill="black" style="fill:black;fill-opacity:1;"/>
-      </svg>
+      <div>
+        <!-- pen to edit discussion -->
+        <svg (click)="edit()" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M11.4 18.1612L18.796 10.7652C17.5518 10.2454 16.4217 9.48641 15.47 8.53121C14.5143 7.57926 13.7549 6.44886 13.235 5.20421L5.83899 12.6002C5.26199 13.1772 4.97299 13.4662 4.72499 13.7842C4.43238 14.1597 4.18125 14.5657 3.97599 14.9952C3.80299 15.3592 3.67399 15.7472 3.41599 16.5212L2.05399 20.6042C1.9913 20.7912 1.982 20.9919 2.02713 21.1838C2.07226 21.3758 2.17004 21.5513 2.30946 21.6907C2.44888 21.8302 2.62443 21.9279 2.81638 21.9731C3.00832 22.0182 3.20904 22.0089 3.39599 21.9462L7.47899 20.5842C8.25399 20.3262 8.64099 20.1972 9.00499 20.0242C9.43632 19.8189 9.83999 19.5692 10.216 19.2752C10.534 19.0272 10.823 18.7382 11.4 18.1612ZM20.848 8.71321C21.5854 7.97577 21.9997 6.9756 21.9997 5.93271C21.9997 4.88982 21.5854 3.88964 20.848 3.15221C20.1106 2.41477 19.1104 2.00049 18.0675 2.00049C17.0246 2.00049 16.0244 2.41477 15.287 3.15221L14.4 4.03921L14.438 4.15021C14.875 5.40099 15.5903 6.5362 16.53 7.47021C17.4919 8.43803 18.6669 9.16745 19.961 9.60021L20.848 8.71321Z" fill="black" style="fill:black;fill-opacity:1;"/>
+        </svg>
 
-      <!-- bin icon to delete -->
-      <svg (click)="delete()" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M19 4H15.5L14.5 3H9.5L8.5 4H5V6H19M6 19C6 19.5304 6.21071 20.0391 6.58579 20.4142C6.96086 20.7893 7.46957 21 8 21H16C16.5304 21 17.0391 20.7893 17.4142 20.4142C17.7893 20.0391 18 19.5304 18 19V7H6V19Z" fill="black" style="fill:black;fill-opacity:1;"/>
-      </svg>
+        <!-- bin icon to delete -->
+        <svg (click)="delete()" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M19 4H15.5L14.5 3H9.5L8.5 4H5V6H19M6 19C6 19.5304 6.21071 20.0391 6.58579 20.4142C6.96086 20.7893 7.46957 21 8 21H16C16.5304 21 17.0391 20.7893 17.4142 20.4142C17.7893 20.0391 18 19.5304 18 19V7H6V19Z" fill="black" style="fill:black;fill-opacity:1;"/>
+        </svg>
+      </div>
+
 
     </header>
     <div>
-      texts hre
+      @for (message of messages();track message.id){
+
+        <div class="message" [class.message-left]="message.creatorId!==currentUserId()" [class.message-right]="message.creatorId==currentUserId()">
+            <span>{{message.createdAt}}</span>
+            <span>{{message.content}}</span>
+        </div>
+
+      }
     </div>
-    <div class="inputContainer">
-      <textarea></textarea>
-      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <form  class="inputContainer" #form="ngForm" (ngSubmit)="onSubmitCreateMessage()">
+      <textarea [(ngModel)]="newMessage.content" name="content"></textarea>
+      <button type="submit">    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M7.3006 17.3438L2.93567 14.0464C1.68639 13.1028 1.9569 11.1535 3.41674 10.5867L15.7349 5.79771C17.3074 5.18598 18.8839 6.67718 18.3604 8.28121L14.2638 20.8471C13.7782 22.3355 11.8476 22.7145 10.8361 21.5196L7.3006 17.3438ZM7.3006 17.3438L12.1109 12.2585" stroke="black" style="stroke:black;stroke-opacity:1;" stroke-linecap="round" stroke-linejoin="round"/>
       </svg>
 
 
-    </div>
+        </button>
+
+
+    </form>
 
   </div>
 
