--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -1,5 +1,7 @@
 <div class="container">Profile works
 
 
-<span (click)="logout()">Déconnecter</span>
+  <button class="button" (click)="logout()">
+    Déconnecter
+  </button>
 </div>
