--- a/src/app/pages/auth/auth.component.html
+++ b/src/app/pages/auth/auth.component.html
@@ -41,7 +41,7 @@
     </label>
     <p class="signin">Already have an acount ? <span  style="text-decoration: underline; cursor: pointer" (click)="setType(type()=='signup'?'login':'signup')">Login</span></p>
 
-    <button class="submit">Submit</button>
+    <button class="button">Submit</button>
 
     <span>(non fonctionnel actuellement)</span>
     <div class="icons">
