--- a/src/app/pages/discussion/discussions/discussions.component.css
+++ b/src/app/pages/discussion/discussions/discussions.component.css
@@ -27,11 +27,12 @@
   box-sizing: border-box;
 }
 
-.button {
+.button1 {
   border: 0;
   border-radius: 5px;
   padding: 13px;
   background: white;
+  color: black;
 }
 
 .searchForm label {
