--- a/src/app/pages/discussion/one-discussion/one-discussion.component.css
+++ b/src/app/pages/discussion/one-discussion/one-discussion.component.css
@@ -42,7 +42,59 @@ header h2{
   border-radius: 5px;
   border: 1px solid rgb(192 192 192 / 40%);background-color: #f3f3f3;
 }
+.contentMessages{
 
+  height: 87%;
+  overflow-y: scroll;
+}
+.messagContainer{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+
+  padding: 20px;
+  box-sizing: border-box;
+}
+.message{
+position: relative;
+  min-width: 30%;
+  max-width: 45%;
+  align-self: self-end;
+  text-align: end;
+
+  background: aliceblue;
+  padding: 20px;
+  border-radius: 8px;}
+.message-right{
+  text-align: end;
+  align-self: self-end;
+}
+.message-left{
+  text-align: start;
+  align-self: start;
+}
+.message-right span:last-child{
+  right: 2%;
+  bottom: -19px;
+}
+.message-left span:last-child{
+  left: 2%;
+  bottom: -19px;
+}
+.message span:last-child{
+  position: absolute;
+
+  font-size: 12px;
+  color: gray;
+}
+.message .delete{
+
+  position: absolute;
+  right: 34%;
+  bottom: -19px;
+  color: gray;
+  cursor: pointer;
+}
 
 form{
 
@@ -50,3 +102,5 @@ form{
 form button{
   cursor: pointer;
 }
+
+
