fix : edit group and get discussions

--- a/src/app/pages/auth/auth.component.html
+++ b/src/app/pages/auth/auth.component.html
@@ -12,7 +12,7 @@
         <label>
           <span>Display Name</span>
           <input [(ngModel)]="newUser.displayName"
-                 name="firstName"
+                 name="displayName"
                  class="input" type="text" placeholder="" required="">
         </label>
 
