feat : authorization and people in group

--- a/src/app/pages/discussion/edit-discussion/edit-discussion.component.html
+++ b/src/app/pages/discussion/edit-discussion/edit-discussion.component.html
@@ -17,15 +17,42 @@
                placeholder="" required="Email is required">
       </label>
 
-      <span>Ajouter des membres</span>
+      <span>Membres</span>
 
 
 
       @if (usersNotInGroup) {
-        @for (user of usersNotInGroup; track user.uid){
-
+        @for (user of usersNotInGroup; track user.uid) {
+          @if (user.uid) {
+            <div>
+              <input type="checkbox"
+                     [id]="user.uid"
+                     [value]="user.uid"
+                     [checked]="selectedUsers.includes(user.uid)"
+                     (change)="toggleUserSelection(user.uid)"
+                     name="participants"/>
+              <label [for]="user.uid">{{ user.displayName }} <span>{{ user.email }}</span></label>
+            </div>
+          }
         }
-       }
+      }
+      @if (usersInGroup) {
+        @for (user of usersInGroup; track user.uid) {
+          @if (user.uid) {
+            <div>
+              <input type="checkbox"
+                     [id]="user.uid"
+                     [value]="user.uid"
+                     [checked]="selectedUsers.includes(user.uid)"
+                     (change)="toggleUserSelection(user.uid)"
+                     name="participants"
+                     checked
+              />
+              <label [for]="user.uid">{{ user.displayName }} <span>{{ user.email }}</span></label>
+            </div>
+          }
+        }
+      }
 
       <button class="submit button">modifier</button>
 
