--- a/src/app/pages/discussion/one-discussion/one-discussion.component.html
+++ b/src/app/pages/discussion/one-discussion/one-discussion.component.html
@@ -5,11 +5,12 @@
 
       <div>
         <!-- pen to edit discussion -->
-        <svg (click)="edit()" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path
-            d="M11.4 18.1612L18.796 10.7652C17.5518 10.2454 16.4217 9.48641 15.47 8.53121C14.5143 7.57926 13.7549 6.44886 13.235 5.20421L5.83899 12.6002C5.26199 13.1772 4.97299 13.4662 4.72499 13.7842C4.43238 14.1597 4.18125 14.5657 3.97599 14.9952C3.80299 15.3592 3.67399 15.7472 3.41599 16.5212L2.05399 20.6042C1.9913 20.7912 1.982 20.9919 2.02713 21.1838C2.07226 21.3758 2.17004 21.5513 2.30946 21.6907C2.44888 21.8302 2.62443 21.9279 2.81638 21.9731C3.00832 22.0182 3.20904 22.0089 3.39599 21.9462L7.47899 20.5842C8.25399 20.3262 8.64099 20.1972 9.00499 20.0242C9.43632 19.8189 9.83999 19.5692 10.216 19.2752C10.534 19.0272 10.823 18.7382 11.4 18.1612ZM20.848 8.71321C21.5854 7.97577 21.9997 6.9756 21.9997 5.93271C21.9997 4.88982 21.5854 3.88964 20.848 3.15221C20.1106 2.41477 19.1104 2.00049 18.0675 2.00049C17.0246 2.00049 16.0244 2.41477 15.287 3.15221L14.4 4.03921L14.438 4.15021C14.875 5.40099 15.5903 6.5362 16.53 7.47021C17.4919 8.43803 18.6669 9.16745 19.961 9.60021L20.848 8.71321Z"
-            fill="black" style="fill:black;fill-opacity:1;"/>
-        </svg>
+
+      @if(currentUserId=== discussion.creatorId){   <svg (click)="edit()" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path
+          d="M11.4 18.1612L18.796 10.7652C17.5518 10.2454 16.4217 9.48641 15.47 8.53121C14.5143 7.57926 13.7549 6.44886 13.235 5.20421L5.83899 12.6002C5.26199 13.1772 4.97299 13.4662 4.72499 13.7842C4.43238 14.1597 4.18125 14.5657 3.97599 14.9952C3.80299 15.3592 3.67399 15.7472 3.41599 16.5212L2.05399 20.6042C1.9913 20.7912 1.982 20.9919 2.02713 21.1838C2.07226 21.3758 2.17004 21.5513 2.30946 21.6907C2.44888 21.8302 2.62443 21.9279 2.81638 21.9731C3.00832 22.0182 3.20904 22.0089 3.39599 21.9462L7.47899 20.5842C8.25399 20.3262 8.64099 20.1972 9.00499 20.0242C9.43632 19.8189 9.83999 19.5692 10.216 19.2752C10.534 19.0272 10.823 18.7382 11.4 18.1612ZM20.848 8.71321C21.5854 7.97577 21.9997 6.9756 21.9997 5.93271C21.9997 4.88982 21.5854 3.88964 20.848 3.15221C20.1106 2.41477 19.1104 2.00049 18.0675 2.00049C17.0246 2.00049 16.0244 2.41477 15.287 3.15221L14.4 4.03921L14.438 4.15021C14.875 5.40099 15.5903 6.5362 16.53 7.47021C17.4919 8.43803 18.6669 9.16745 19.961 9.60021L20.848 8.71321Z"
+          fill="black" style="fill:black;fill-opacity:1;"/>
+      </svg>
 
         <!-- bin icon to delete -->
         <svg (click)="delete()" width="24" height="24" viewBox="0 0 24 24" fill="none"
@@ -18,17 +19,26 @@
             d="M19 4H15.5L14.5 3H9.5L8.5 4H5V6H19M6 19C6 19.5304 6.21071 20.0391 6.58579 20.4142C6.96086 20.7893 7.46957 21 8 21H16C16.5304 21 17.0391 20.7893 17.4142 20.4142C17.7893 20.0391 18 19.5304 18 19V7H6V19Z"
             fill="black" style="fill:black;fill-opacity:1;"/>
         </svg>
+      }@else{
+        <svg (click)="leftDiscussion()" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M6 2H15C15.5304 2 16.0391 2.21071 16.4142 2.58579C16.7893 2.96086 17 3.46957 17 4V6H15V4H6V20H15V18H17V20C17 20.5304 16.7893 21.0391 16.4142 21.4142C16.0391 21.7893 15.5304 22 15 22H6C5.46957 22 4.96086 21.7893 4.58579 21.4142C4.21071 21.0391 4 20.5304 4 20V4C4 3.46957 4.21071 2.96086 4.58579 2.58579C4.96086 2.21071 5.46957 2 6 2Z" fill="black" style="fill:black;fill-opacity:1;"/>
+          <path d="M16.09 15.59L17.5 17L22.5 12L17.5 7L16.09 8.41L18.67 11H9V13H18.67L16.09 15.59Z" fill="black" style="fill:black;fill-opacity:1;"/>
+        </svg>
+
+      }
+
       </div>
 
 
     </header>
     <div class="contentMessages">
+      @if(currentUserId){
       @for (message of messages; track message.id) {
         <div class="messagContainer">
-          <div class="message" [class.message-left]="message.creatorId!==currentUserId()"
-               [class.message-right]="message.creatorId==currentUserId()">
-            @if(message.id){
-              <span (click)="deleteMessage(message.id)" class="delete">Delete</span>
+          <div class="message" [class.message-left]="message.creatorId!==currentUserId"
+               [class.message-right]="message.creatorId==currentUserId">
+            @if(message.id && currentUserId==message.creatorId){
+              <span (click)="deleteMessage(message)" class="delete">Delete</span>
             }
             <span>{{ message.content }}</span>
             <span>{{ message.createdAtString }}</span>
@@ -37,6 +47,7 @@
         </div>
 
 
+      }
       }
     </div>
     <form class="inputContainer" #form="ngForm" (ngSubmit)="onSubmitCreateMessage()">
