feat : authorization and people in group

--- a/src/app/pages/profile/profile.component.html
+++ b/src/app/pages/profile/profile.component.html
@@ -4,8 +4,8 @@
   <button class="button" (click)="logout()">
     Déconnecter
   </button>
-<!--  <button class="button" (click)="delete()">-->
-<!--    delete-->
-<!--  </button>-->
+  <button class="button" (click)="delete()">
+    delete
+  </button>
 }
 </div>
